# werma

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  identity.json  install.sh  limits.json  strategy.yaml
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_tracker_adapter.yml
.github/workflows/: build.yml  ci.yml  e2e.yml  prompt-eval.yml  release.yml  update-branches.yml
agents/analyst/: character.md  memory.md
agents/devops/: character.md  memory.md
agents/engineer/: character.md  memory.md
agents/finance-context/: character.md  memory.md
agents/morning-brief/: character.md  memory.md
agents/orchestrator/: character.md  memory.md
agents/qa/: character.md  memory.md
agents/reviewer/: character.md  memory.md
agents/watchdog/: character.md  memory.md
agents/weekly-review/: character.md  memory.md
docs/: lore.md
docs/research/: 2026-03-10-cicd-inspiration-for-werma.md  2026-03-10-cli-patterns-werma-improvement.md  2026-03-10-werma-competitive-landscape.md  2026-03-11-wasteland-gas-town.md  RIG-368-gemini-qwen-headless-contracts.md
docs/specs/: RIG-98-disable-orchestrator-watchdog-fix-linear.md
engine/: CHANGELOG.md  Cargo.toml  build.rs
engine/migrations/: 001_init.sql  002_repo_hash.sql  003_estimate.sql  004_normalize_linear_ids.sql  005_callback_fired_at.sql  006_add_canceled_status.sql  006_canceled_status.sql  007_callback_attempts_and_indexes.sql  008_retry.sql  009_cost_tracking.sql  010_effects_and_handoff.sql  011_runtime.sql  012_rename_linear_issue_id.sql
engine/pipelines/: default.yaml  economy.yaml  honeyjourney.yaml
engine/pipelines/evals/: promptfooconfig.yaml  verdict-parsing.yaml
engine/pipelines/evals/prompts/: analyst-eval.txt  deployer-eval.txt  engineer-eval.txt  reviewer-eval.txt
engine/pipelines/evals/tests/: golden-dataset.yaml
engine/pipelines/prompts/: analyst.md  deployer.md  devops.md  engineer.md  qa.md  reviewer.md
engine/src/: art.rs  backup.rs  build.rs  cli.rs  config.rs  daemon.rs  dashboard.rs  db.rs  e2e_helpers.rs  e2e_tests.rs  full_cycle_tests.rs  integration_tests.rs  issue_helpers.rs  linear.rs  main.rs  migrate.rs  models.rs  notify.rs  pipeline.rs  project.rs  regression_tests.rs  runner.rs  tracker.rs  traits.rs  ui.rs  update.rs  worktree.rs
engine/src/commands/: clean.rs  config_cmd.rs  daemon_cmd.rs  display.rs  effects.rs  linear_cmd.rs  misc.rs  mod.rs  pipeline_cmd.rs  review.rs  schedule.rs  task.rs
engine/src/commands/task/: crud.rs  exec.rs  mod.rs  state.rs  status.rs
engine/src/daemon/: cancel_check.rs  cleanup.rs  cron.rs  merge.rs  mod.rs  pipeline.rs  queue.rs  zombie.rs
engine/src/db/: effects.rs  fakes.rs  mod.rs  pipeline.rs  schedule.rs  task.rs  usage.rs
engine/src/github/: client.rs  mod.rs
engine/src/linear/: api.rs  client.rs  config.rs  fakes.rs  helpers.rs  mod.rs  queries.rs  setup.rs  sync.rs  tests.rs
engine/src/pipeline/: callback.rs  config.rs  effects.rs  executor.rs  helpers.rs  loader.rs  mod.rs  poll.rs  pr.rs  prompt.rs  verdict.rs
engine/src/pipeline/callback/: comments.rs  decision.rs  effects_helper.rs  mod.rs  retry.rs  spawn.rs  task_builder.rs  tests.rs
engine/tests/: smoke.rs
orchestrator/: heartbeat.sh
shared/: signals.md
shared/knowledge/: decisions.md  errors.md  patterns.md
strategy/okrs/: Q2-2026.yaml
