[package]
name = "werma"
version = "0.5.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.35", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
cron = "0.15"
anyhow = "1"
dirs = "6"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
cloned_instead_of_copied = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
implicit_clone = "warn"
single_match_else = "warn"
semicolon_if_nothing_returned = "warn"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "s"
panic = "abort"
